# libsunaba

./: .gitattributes  .gitignore  .tokeignore  CMakeLists.txt  CMakePresets.json  README.md  SConstruct  api.hxml  build_luajit.py  compiletest.hxml  gdext.vcxproj  gdext.vcxproj.DotSettings  haxelib.json
.github/workflows/: builds.yml
.sln/: gdext.vcxproj  newhaven.sln  sunaba.sln
.zed/: settings.json
api/: EReg.hx  Sys.hx  haxelib.json
api/_std/: EReg.hx  Sys.hx
api/newhaven/: AccessEnum.hx  AccessibilityAction.hx  AccessibilityRole.hx  AccessibilityScrollHint.hx  AccessibilityScrollUnit.hx  ActionModeEnum.hx  ActionTypeEnum.hx  AlphaAntiAliasing.hx  AlphaCutMode.hx  AlphaMode.hx  AmbientModeEnum.hx  AnimatedTexture.hx  AnimationCallbackModeDiscrete.hx  AnimationCallbackModeMethod.hx  AnimationCallbackModeProcess.hx  App.hx  AreaParameter.hx  AreaSpaceOverrideMode.hx  ArrayCustomFormat.hx  ArrayFormat.hx  AtlasTexture.hx  AttenuationModelEnum.hx  AudioElement.hx  Axis.hx  AxisFlag.hx  AxisStretchMode.hx  BGMode.hx  BakeChannels.hx  BarrierMask.hx  BaseClass.hx  Behavior.hx  BillboardModeEnum.hx  BitMap.hx  BlendFactor.hx  BlendOperation.hx  BlendShapeEntry.hx  BodyAxis.hx  BodyDampMode.hx  BodyFlagsEnum.hx  BodyParameter.hx  (+388 more)
api/sunaba/: AdvanceModeEnum.hx  AlignmentMode.hx  AlphaAntiAliasing.hx  AlphaMode.hx  AnimatedTexture.hx  AnimationCallbackModeDiscrete.hx  AnimationProcessCallback.hx  AnisotropicFiltering.hx  ApiType.hx  App.hx  AppView.hx  AprilTagDict.hx  AreaParameter.hx  AreaSpaceOverrideMode.hx  ArrayType.hx  ArucoDictEnum.hx  AtlasTexture.hx  AudioElement.hx  AudioService.hx  AudioStreamGeneratorMixRate.hx  AutoTranslateModeEnum.hx  AxisFlag.hx  BakeError.hx  BarrierMask.hx  BaseClass.hx  Behavior.hx  BitMap.hx  BlendModeEnum.hx  BlendShapeMode.hx  BodyMode.hx  BodyState.hx  BoneUpdateEnum.hx  BreadcrumbMarker.hx  CacheMode.hx  Camera2DProcessCallback.hx  CameraService.hx  CameraTexture.hx  CanvasGroupMode.hx  CanvasItem.hx  CanvasItemAutoTranslateMode.hx  (+473 more)
api/sys/: FileSystem.hx
bindgen/: .gitignore  ClassBuilder.cs.uid  EnumBind.cs  EnumBind.cs.uid  EnumBuilder.cs.uid  HaxeExternGenerator.cs  HaxeExternGenerator.cs.uid  Main.cs  Main.cs.uid  icon.svg.import  main.tscn  project.godot
demo/: Newhaven.Demo.sln  Newhaven.csproj  Newhaven.sln  Sunaba.csproj  Sunaba.csproj.old  Sunaba.csproj.old.2  Sunaba.csproj.old.3  Sunaba.sln  app_test_10.gd  app_test_10.tscn  app_test_11.gd  app_test_11.gd.uid  app_test_11.tscn  app_test_2.gd  app_test_2.gd.uid  app_test_2.tscn  app_test_3.gd  app_test_3.tscn  app_test_4.gd  app_test_4.gd.uid  app_test_4.tscn  app_test_5.gd  app_test_5.gd.uid  app_test_5.tscn  app_test_6.gd  app_test_6.tscn  app_test_7.gd  app_test_7.tscn  app_test_8.gd  app_test_8.tscn  app_test_9.gd  app_test_9.tscn  example.gd.uid  new_environment.tres  project.godot  runtime_test_1.gd  runtime_test_1.tscn
demo/Bindgen/: BindgenScene.cs  BindgenScene.cs.uid  BindgenScene.tscn  ClassBuilder.cs  ClassBuilder.cs.uid  EnumBind.cs  EnumBind.cs.uid  EnumBuilder.cs  EnumBuilder.cs.uid  HaxeExternGenerator.cs  HaxeExternGenerator.cs.uid  ResourceExtensionBuilder.cs  ResourceExtensionBuilder.cs.uid  ServiceBuilder.cs  ServiceBuilder.cs.uid
demo/Engine/: App.gd  Component.cs  Component.cs.uid  DefaultThemes.gd  FileSystemIo.cs  FontTexture.gd.uid  GameObject.cs  GameObject.cs.uid  InfoBoxPlus.tscn  IoInterface.cs  IoInterfaceZip.cs  IoManager.cs  IoSystem.gd  NodeProxy.gd  Scene.cs  Scene.cs.uid  SceneSystem.gd  SceneSystem.gd.uid  ScriptFunctionWrapper.gd  ShellConsole.cs  SrciptLoader.gd  SystemIoBase.cs  UnixSystemIo.cs  WindowsSystemIo.cs
demo/GDExtensionBindgen/: ExampleClass.cs  ExampleClass.cs.uid  Runtime.cs  ScriptFunction.cs  ScriptFunction.cs.uid  ScriptObject.cs  ScriptObject.cs.uid
demo/Newhaven/: FileSystemIo.cs  IoInterface.cs  IoInterfaceZip.cs  IoManager.cs  SystemIoBase.cs  UnixSystemIo.cs  WindowsSystemIo.cs
demo/TestRunners/: app_test_10.gd.uid  app_test_10.tscn  app_test_11.tscn  app_test_12.gd  app_test_12.gd.uid  app_test_12.tscn  app_test_13.gd  app_test_13.gd.uid  app_test_13.tscn  app_test_2.gd  app_test_2.tscn  app_test_3.gd.uid  app_test_3.tscn  app_test_4.gd  app_test_4.tscn  app_test_5.tscn  app_test_6.gd.uid  app_test_6.tscn  app_test_7.gd  app_test_7.gd.uid  app_test_7.tscn  app_test_8.gd.uid  app_test_8.tscn  app_test_9.gd  app_test_9.gd.uid  app_test_9.tscn  runtime_test_1.gd  runtime_test_1.gd.uid  runtime_test_1.tscn
demo/environments/: clear_sky.exr.import
enum_api/: haxelib.json
enum_api/newhaven/: AccessEnum.hx  AccessibilityFlags.hx  AccessibilityLiveMode.hx  AccessibilityPopupType.hx  AccessibilityScrollUnit.hx  ActionModeEnum.hx  AdvanceModeEnum.hx  AlignmentMode.hx  AmbientSource.hx  Anchor.hx  AnchorModeEnum.hx  AnimationCallbackModeMethod.hx  AnimationMethodCallMode.hx  AnimationProcessCallback.hx  AnisotropicFiltering.hx  ApiType.hx  AreaBodyStatus.hx  AreaParameter.hx  ArrayFormat.hx  ArrayType.hx  AstcFormat.hx  AudioStreamGeneratorMixRate.hx  AutoAdvanceMode.hx  AutoTranslateModeEnum.hx  AutowrapMode.hx  AxisStretchMode.hx  BakeError.hx  BakeMode.hx  BakeQuality.hx  (+331 more)
luajit-cmake/: LuaJIT.cmake
src/: JavaScriptContext.cpp  JavaScriptContext.h  NativeObject.h  NativeReference.h  QuickJSContext.cpp  QuickJSContext.h  QuickJSRuntime.cpp  QuickJSRuntime.h  Runtime.cpp  Runtime.h  ScriptCallableCustom.h  ScriptFunction.cpp  ScriptFunction.h  ScriptObject.cpp  ScriptObject.h  debugger_lua.h  example_class.cpp  luaopen_AABB.cpp  luaopen_ArrayList.cpp  luaopen_Basis.cpp  luaopen_Callable.cpp  luaopen_Color.cpp  luaopen_Dictionary.cpp  luaopen_NativeObject.cpp  luaopen_NativeObject_sandboxed.cpp  luaopen_NativeReference.cpp  luaopen_NativeReference_sandboxed.cpp  luaopen_Plane.cpp  luaopen_Projection.cpp  luaopen_Quaternion.cpp  luaopen_Rect2.cpp  luaopen_Rect2i.cpp  luaopen_Signal.cpp  luaopen_Transform2D.cpp  luaopen_Transform3D.cpp  luaopen_Variant.cpp  luaopen_Variant_arrayMethods.cpp  luaopen_Variant_asMethods.cpp  luaopen_Variant_constructors.cpp  luaopen_Variant_fromMethods.cpp  (+10 more)
tools/: luajit.py
(+2312 files in other folders)
